[tool.poetry]
name = "pydangorm"
version = "0.0.0"
description = "pydantic based ArangoDB ODM"
authors = ["nadobando <7695172+nadobando@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "pydango" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
aioarango = "^1.0.0"
pydantic = "==1.10.12"
urllib3 = "==1.26.15"
indexed = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
pre-commit = "^3.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
coverage = "^7.2.5"
isort = "^5.12.0"
mypy = "^1.5.1"
freezegun = "^1.2.2"
pydiction = "^0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:"
]


[tool.autopep8]
max_line_length = 120
#ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
preview = true
exclude = """
(
  /(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | .venv2
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
"""

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"


[tool.bandit.assert_used]
skips = ["tests/utils*.py", '**/test_*.py', '**/test_*.py']

[tool.ruff]
line-length = 120
exclude = ["stubs"]

[tool.mypy]
mypy_path = "./stubs/"
#explicit_package_bases = true
exclude = """
(
  /(
      backups         # exclude a few common directories in the
    | local          # root of the project
  )/
)
"""

plugins = ["pydantic.mypy"]
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "requests_toolbelt",
    "indexed"
]
ignore_missing_imports = true


[tool.semantic_release]
match = "main"
prerelease = false
version_variables = [
    "pydango/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^ci:.*",
    "^(?!feat:|fix:|perf:|refactor:).*$"
]

[tool.semantic_release.publish]
upload_to_vcs_release = false
